[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformations"
version = "2013.06.29"
authors = [
  { name="Christoph Gohlke <http://www.lfd.uci.edu/~gohlke/>", email="not_available@abc.com" },
]
description = "Homogeneous Transformation Matrices and Quaternions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://www.lfd.uci.edu/~gohlke/"